fix modal-add z-index

--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ body {
   width: 300px;
   background-color: #000;
   border-radius: var(--border-radius);
-  z-index: 1;
+  z-index: 2;
 }
 
 .modal-add__inner {
